# tcc

./: .gitignore  AGENTS.md  ARTICLE_NOTES.md  CMakeLists.txt  DEVELOPMENT_TRACKING.md  Liquid_Concepts_and_Architecture.md
include/liquid/: BehaviorRegistry.hpp  ComponentRegistry.hpp  ComponentStorage.hpp  Coordinator.hpp  Ids.hpp  IntentExpiration.hpp  IntentLifetime.hpp  IntentRegistry.hpp  Runtime.hpp  SystemRegistry.hpp
include/liquid/world/: Coordinator.hpp  World.hpp  WorldState.hpp
src/: BehaviorRegistry.cpp  ComponentRegistry.cpp  Coordinator.cpp  IntentExpiration.cpp  IntentRegistry.cpp  Runtime.cpp  SystemRegistry.cpp
src/world/: Coordinator.cpp  World.cpp
tests/: test_behavior_registry.cpp  test_component_registry.cpp  test_component_storage.cpp  test_coordinator.cpp  test_ids.cpp  test_intent_expiration.cpp  test_intent_registry.cpp  test_intent_resolution.cpp  test_runtime.cpp  test_stress.cpp  test_system_registry.cpp  test_world.cpp
